# AWAttackerApplier

./: .gitignore  .pdm-python  Cargo.toml  Makefile  README.md  analysis_options.yaml  build.rs  flutter_impeller.json  pubspec.yaml  pyproject.toml
.github/workflows/: ci.yaml
android/app/: build.gradle
docs/: design.md
lib/: main.dart  overlay_entry.dart
lib/constants/: storage_keys.dart
lib/exceptions/: overlay_exception.dart  rule_import_exception.dart  tag_activation_exception.dart
lib/extensions/: rule_extensions.dart
lib/l10n/: app_en.arb  app_zh.arb
lib/models/: element_result.dart  overlay_result.dart  overlay_style.dart  permission_status.dart  rule.dart  rule_conflict_type.dart  rule_import.dart  rule_merge_result.dart  rule_validation_result.dart  rule_validation_state.dart  window_event.dart
lib/pages/: main_page.dart  rule_edit_page.dart  rule_list_page.dart  server_config_page.dart
lib/providers/: connection_provider.dart  connection_provider_broadcast.dart  rule_provider.dart  rule_validation_provider.dart
lib/repositories/: rule_repository.dart  storage_repository.dart
lib/services/: accessibility_service.dart  background_service.dart  connection_service.dart  grpc_service.dart  native_overlay_service.dart  overlay_service.dart  permission_service.dart  rule_matching_service.dart  storage_service.dart
lib/storage/: rule_storage.dart
lib/utils/: overlay_converter.dart  rule_field_validator.dart  rule_import_validator.dart  (+1 more)
proto/: accessibility.proto
python/: server.py
src/: adb.rs  grpc_service.rs  lib.rs  main.rs
(+65 files in other folders)
