[package]
name = "aw_attacker_monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_client"
path = "src/bin/test_client.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-stream = "0.3"
futures = "0.3"
regex = "1.5"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12.3"
