[project]
name = "awattacker"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Zsbyqx20", email = "112002598+Zsbyqx20@users.noreply.github.com"},
]
dependencies = ["fastapi>=0.115.6", "pydantic>=2.10.4", "uvicorn>=0.34.0", "Appium-Python-Client>=4.4.0", "websockets>=14.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "Apache-2.0"}


[project.optional-dependencies]
dev = [
    "ruff>=0.8.4",
    "pyright>=1.1.391",
]
[tool.pdm]
distribution = false

[tool.pdm.scripts]
_ruff_check_format = "ruff format . --check --preview"
_ruff_check = "ruff check . --preview"
_pyright = "pyright"
_ruff_sort_imports = "ruff check --select I --fix . --preview"
_ruff_format_code = "ruff format . --preview"

fix = "ruff check --fix . --preview"
format = {composite = ['_ruff_sort_imports', '_ruff_format_code']}
check = {composite = ['_ruff_check_format', '_ruff_check', '_pyright']}